# crystallograpy

./: README.md  preinstall.sh  pyproject.toml
scripts/: build_lattice_dicts.py
